# CloudSaw

./: .gitignore  CONTRACT_05_VERIFICATION.md  CONTRACT_06_VERIFICATION.md  CONTRACT_07_VERIFICATION.md  CONTRACT_08_VERIFICATION.md  CONTRACT_09_VERIFICATION.md  CONTRACT_10_VERIFICATION.md  CONTRACT_11_VERIFICATION.md  CONTRACT_12_VERIFICATION.md  CONTRACT_13_VERIFICATION.md  CONTRACT_14_VERIFICATION.md  CONTRACT_15_VERIFICATION.md  CONTRACT_16_VERIFICATION.md  CONTRACT_17_VERIFICATION.md  CONTRIBUTING.md  CloudSaw-Local-Run.md  LICENSE  NOTICE  QA_CHECKLIST_2026-05-28.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  qa-xss.html  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dependabot-security.yml  release.yml
docs/: release-signing.md
scripts/: generate-finding-content.py  sync-locales.mjs
src/: App.tsx  index.css  main.tsx  qa-xss-fixture.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/knowledgebase/: mappings.json  scoutsuite_metadata.json
src-tauri/knowledgebase/articles/: cloudfront-distribution-no-https.md  cloudfront-distribution-no-logs.md  cloudtrail-no-log-file-validation.md  cloudtrail-no-logs-encryption.md  cloudtrail-not-enabled-globally.md  ec2-instance-with-public-ip.md  ec2-security-group-opens-all-ports-to-all.md  ec2-security-group-opens-rdp-to-all.md  ec2-security-group-opens-ssh-to-all.md  elb-no-access-logs.md  elbv2-no-deletion-protection.md  iam-password-policy-no-expiration.md  iam-password-policy-no-lowercase.md  iam-password-policy-no-minimum-length.md  iam-password-policy-no-number.md  iam-password-policy-no-reuse-prevention.md  iam-password-policy-no-symbol.md  iam-password-policy-no-uppercase.md  iam-root-account-mfa-not-enabled.md  iam-root-account-with-access-keys.md  iam-user-no-mfa.md  iam-user-with-inline-policies.md  iam-user-with-policies-attached.md  kms-cmk-rotation-disabled.md  lambda-old-runtime.md  rds-instance-no-backup.md  rds-instance-no-encryption.md  rds-instance-no-minor-version-upgrade.md  rds-instance-publicly-accessible.md  s3-bucket-allowing-public-access.md  s3-bucket-no-default-encryption.md  s3-bucket-no-logging.md  s3-bucket-no-mfa-delete.md  s3-bucket-no-versioning.md  vpc-default-security-group-with-rules.md  vpc-flow-logs-disabled.md
src-tauri/knowledgebase/finding-catalog/: en.json  es.json  fr.json  zh.json
src-tauri/migrations/: 0001_init.sql  0002_app_lock.sql  0003_accounts.sql  0004_terraform.sql  0005_scanner.sql  0006_findings.sql  0007_scheduler.sql  0008_eventlog_retention.sql  0009_github_integration.sql  0010_ai_context.sql  0011_onboarding.sql  0012_reports.sql  0013_ai_providers.sql  0014_finding_resource_attributes.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/accounts/: error.rs  mod.rs  storage.rs  types.rs  validation.rs
src-tauri/src/ai/: builder.rs  client.rs  context.rs  error.rs  key.rs  mod.rs  providers.rs  types.rs
src-tauri/src/applock/: biometric.rs  hashing.rs  identity.rs  mod.rs  session.rs  storage.rs
src-tauri/src/auth/: create_profile.rs  error.rs  mod.rs  profiles.rs  sts.rs
src-tauri/src/db/: migrations.rs  mod.rs  paths.rs
src-tauri/src/deletion/: error.rs  mod.rs
src-tauri/src/eventlog/: error.rs  export.rs  mod.rs  storage.rs  types.rs
src-tauri/src/findings/: error.rs  mod.rs  parser.rs  storage.rs  types.rs
src-tauri/src/github/: bundle.rs  client.rs  error.rs  mod.rs  pat.rs  redact.rs  storage.rs  types.rs
src-tauri/src/ipc/: dev.rs  mod.rs
src-tauri/src/keychain/: mod.rs  store_keyring.rs  store_memory.rs
src-tauri/src/knowledgebase/: bundled.rs  error.rs  mod.rs  parser.rs  refresh.rs  registry.rs  scoutsuite.rs  storage.rs  types.rs
src-tauri/src/onboarding/: error.rs  mod.rs
src-tauri/src/reports/: aggregator.rs  error.rs  exporter.rs  html.rs  mod.rs  model.rs  pdf.rs  report.css  settings.rs
src-tauri/src/retention/: error.rs  mod.rs  storage.rs  types.rs
src-tauri/src/scanner/: binary.rs  error.rs  handles.rs  mod.rs  runner.rs  storage.rs  sts.rs  types.rs
src-tauri/src/scanner_role/: connect.rs  error.rs  mod.rs  storage.rs  types.rs
src-tauri/src/scheduler/: cadence.rs  error.rs  mod.rs  runner.rs  storage.rs  types.rs
src-tauri/src/terraform/: binary.rs  error.rs  identity.rs  mod.rs  plans.rs  runner.rs  storage.rs  types.rs  workdir.rs
src-tauri/src/wipe/: mod.rs  selfdelete.rs
src-tauri/tests/: accounts_test.rs  applock_test.rs  auth_test.rs  findings_test.rs  knowledgebase_test.rs  migrations_test.rs  qa05_test.rs  qa06_test.rs  qa10_test.rs  qa11_test.rs  qa12_test.rs  qa13_test.rs  qa14_test.rs  qa15_test.rs  qa16_test.rs  qa17_test.rs  scanner_test.rs  scheduler_test.rs  terraform_test.rs
src-tauri/tf-modules/scanner-role/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
src/components/: AiRequestPreviewModal.tsx  BackBreadcrumb.tsx  Badge.tsx  Button.tsx  ConnectScannerRoleForm.tsx  CustomReportModal.tsx  Drawer.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorReportDialog.tsx  ExportActivityLogModal.tsx  ExportReportDialog.tsx  FindingGitHubAction.tsx  LineChart.tsx  Logo.tsx  MeatballMenu.tsx  Modal.tsx  PasswordField.tsx  ReportBugFlag.tsx  SafeMarkdown.tsx  Select.tsx  SeverityBadge.tsx  SubmissionPreviewModal.tsx  Switch.tsx  TagInput.tsx  TopNav.tsx  UpdateBanner.tsx  VersionFooter.tsx  VirtualList.tsx  index.ts
src/contexts/: ScanModalContext.tsx
src/hooks/: useAppearance.ts  useIpcError.ts  useT.ts
src/lib/: appearance.ts  i18n.ts  ipc.ts  scanNotifications.ts  updatePrefs.ts
src/locales/: en.json  es.json  fr.json  zh.json
src/routes/: Accounts.tsx  ActivityLog.tsx  CustomReport.tsx  Dashboard.tsx  Findings.tsx  FirstRunSetup.tsx  Home.tsx  Onboarding.tsx  Profiles.tsx  ProvisionScannerRole.tsx  ScanProgress.tsx  ScheduledScans.tsx  Settings.tsx  UnlockScreen.tsx
src/routes/dashboard/: DriftView.tsx  FindingsView.tsx  (+1 more)
src/stores/: locale.tsx  lock.tsx
