[package]
name = "cloudsaw"
version = "2026.5.0"
description = "CloudSaw — local-first AWS security scanner"
authors = ["CloudSaw Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Camdun-Solutions/CloudSaw"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cloudsaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
password-hash = { version = "0.5", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

# Terraform scanner-role provisioner (Contract 05). `sha2` verifies the
# bundled Terraform binary against its build-pinned hash before every
# execution; `hex` is used only for stable string representations of those
# hashes. Both are pure-Rust, no_std-friendly crates that are already in our
# transitive graph — pulling them in directly removes the version drift risk.
sha2 = "0.10"
hex = "0.4"

# AWS authentication (Contract 03). The SDK provider chain is used unmodified;
# CloudSaw never reads ~/.aws/credentials directly. Only STS is wired up here —
# scanner-role assumption and other API surfaces are added by later contracts.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
    "sso",
] }
aws-sdk-sts = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
] }
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["time", "rt", "macros"] }

# Opt-in knowledge-base remote refresh (Contract 08). Default OFF; only
# used when the user explicitly enables the refresh feature in Settings.
# Pinned to a minimal feature set so we don't accidentally inherit
# OpenSSL or cookies. `blocking` is used because every other knowledgebase
# call site is sync — the entire surface stays uniform.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "http2",
] }

[target."cfg(unix)".dependencies]
libc = "0.2"

# Windows Hello (and PIN/passkey fallback) for biometric unlock and the
# OS-level identity verification used by password recovery. The `windows`
# crate is feature-gated to just the WinRT namespaces we touch.
[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Security_Credentials_UI",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
