[package]
name = "cloudsaw"
version = "2026.5.27"
description = "CloudSaw — local-first AWS security scanner"
authors = ["CloudSaw Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Camdun-Solutions/CloudSaw"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cloudsaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Used by build.rs::generate_scoutsuite_pin() to parse
# vendor/scoutsuite/pinned.json and bake the SHA into a generated
# OUT_DIR/scoutsuite_pin.rs that src/scanner/binary.rs include!()s.
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
# Tauri 2 native save / open dialog plugin. The report exporter
# (Contract 15) uses this on the frontend to source the output path;
# the Rust side never trusts a frontend-supplied arbitrary string
# (CLAUDE.md §4.1 + Contract 15 §Constraints).
tauri-plugin-dialog = "2"
# Tauri 2 auto-updater plugin (Contract 16). Configured in
# `tauri.conf.json` and registered as notify-only — the plugin
# verifies an Ed25519 signature against the configured public key
# before applying an update. The private key NEVER lives in the
# repo; see docs/release-signing.md.
tauri-plugin-updater = "2"
# PR #54 — desktop notification on scan completion. The plugin
# handles OS-specific permission prompts (macOS, Windows toast,
# Linux libnotify) on first send. Wired in `src/lib.rs::run()`;
# fired from the frontend via @tauri-apps/plugin-notification when
# our SCAN_FINISHED_EVENT DOM event dispatches AND the user has
# opted in via the Settings → Notifications toggle.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
password-hash = { version = "0.5", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

# Terraform scanner-role provisioner (Contract 05). `sha2` verifies the
# bundled Terraform binary against its build-pinned hash before every
# execution; `hex` is used only for stable string representations of those
# hashes. Both are pure-Rust, no_std-friendly crates that are already in our
# transitive graph — pulling them in directly removes the version drift risk.
sha2 = "0.10"
hex = "0.4"

# AWS authentication (Contract 03). The SDK provider chain is used unmodified;
# CloudSaw never reads ~/.aws/credentials directly. Only STS is wired up here —
# scanner-role assumption and other API surfaces are added by later contracts.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
    "sso",
] }
aws-sdk-sts = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
] }
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["time", "rt", "macros"] }

# Opt-in knowledge-base remote refresh (Contract 08). Default OFF; only
# used when the user explicitly enables the refresh feature in Settings.
# Pinned to a minimal feature set so we don't accidentally inherit
# OpenSSL or cookies. `blocking` is used because every other knowledgebase
# call site is sync — the entire surface stays uniform.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "http2",
    "json",
] }

# OS-native secure storage used for the small number of long-lived secrets
# CloudSaw stores (GitHub PATs from Contract 12, the user's own AI provider
# key from Contract 13). The eventlog/retention/panic-wipe contract (C11)
# pulls the crate in so the panic action can enumerate and remove every
# CloudSaw keychain entry across macOS Keychain, Windows Credential Manager,
# and the Linux Secret Service. The set of services CloudSaw writes is
# tracked in `keychain::cloudsaw_entries()` — later contracts append to it.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }

# Redaction rules for the GitHub error-report bundle (Contract 12).
# Used purely for token-level pattern matching against a known-static
# set of patterns (AWS ARNs, account IDs, access keys, PAT formats). The
# crate is already in our transitive graph via tauri/aws-sdk; pulling it
# in directly removes the version-drift risk.
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }

# Pure-Rust PDF generator used by the report exporter (Contract 15).
# Pinned to a known-good minor; `printpdf` ships a built-in Helvetica
# font usable for ASCII + Latin-1 output. Full Unicode (CJK, etc.)
# in the PDF surface is handled by the HTML report which renders
# through the OS browser stack — the contract documents this split
# in CONTRACT_15_VERIFICATION.md.
printpdf = { version = "0.7", default-features = false }

[target."cfg(unix)".dependencies]
libc = "0.2"

# Windows Hello (and PIN/passkey fallback) for biometric unlock and the
# OS-level identity verification used by password recovery. The `windows`
# crate is feature-gated to just the WinRT namespaces we touch.
[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Security_Credentials_UI",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
